Fixed task too wide

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -115,6 +115,7 @@ img {
   margin-bottom: 10px;
   margin-left: auto;
   margin-right: auto;
+  width: 500px;
 }
 
 audio {
