--- a/frontend/src/TasksPlayList.css
+++ b/frontend/src/TasksPlayList.css
@@ -22,4 +22,9 @@ div.task {
     border-radius: 10px;
     background-color: #cfc3bb;
     margin-bottom: 10px;
+    margin-left: 250px;
+    margin-right: 250px;
+    padding-bottom: 10px;
+    padding-right: 10px;
+    padding-left: 10px;
   }
